--- a/index.html
+++ b/index.html
@@ -1,10 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Github</title>
+    <link rel="icon" href="./favicon (1).ico" type="image/x-con" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./header.css" />
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./footer.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header container">
+      <div class="row">
+        <div class="row">
+          <a class="navbar-brand col col-lg-2" href="https://github.com/">
+            <img src="./icons/brand-logo.svg" width="32" height="32" />
+          </a>
+
+          <nav class="navbar bg-light col col-lg-2">
+            <div class="container-fluid">
+              <form class="d-flex" role="search">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+              </form>
+            </div>
+          </nav>
+        </div>
+
+        <div class="navbar row">
+          <nav class="nav">
+            <a class="nav-link" href="#">Pull requests</a>
+            <a class="nav-link" href="#">Issues</a>
+            <a class="nav-link" href="#">Marketplace</a>
+            <a class="nav-link" href="#">Explore</a>
+          </nav>
+        </div>
+
+        <div class="row notifications">
+          <button type="button" class="badge text-bg-light">
+            <a href="https://github.com/notifications">
+              <img
+                src="./icons/notifications.svg"
+                title="u have no unread notifications"
+              />
+            </a>
+            <!-- Inbox
+                  <span
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                  >
+                    1
+                    <span class="visually-hidden">unread messages</span>
+                  </span> -->
+          </button>
+        </div>
+        <div>
+          <div class="dropdown">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <img src="./icons/plus.svg" />
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li>
+                <a class="dropdown-item" href="#">Another action</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="dropdown-profile"></div>
+      </div>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
