--- a/index.html
+++ b/index.html
@@ -17,78 +17,152 @@
     <link rel="stylesheet" href="./footer.css" />
   </head>
   <body>
-    <header class="header container">
-      <div class="row">
-        <div class="row">
-          <a class="navbar-brand col col-lg-2" href="https://github.com/">
-            <img src="./icons/brand-logo.svg" width="32" height="32" />
-          </a>
-
-          <nav class="navbar bg-light col col-lg-2">
-            <div class="container-fluid">
-              <form class="d-flex" role="search">
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
-              </form>
-            </div>
-          </nav>
+    <header class="header">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="brand-logo" href="https://github.com/">
+          <img src="./icons/brand-logo.svg" />
+        </a>
+        <div class="searchline">
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search or jump to ..."
+              aria-label="Search"
+            />
+          </form>
         </div>
-
-        <div class="navbar row">
-          <nav class="nav">
-            <a class="nav-link" href="#">Pull requests</a>
-            <a class="nav-link" href="#">Issues</a>
-            <a class="nav-link" href="#">Marketplace</a>
-            <a class="nav-link" href="#">Explore</a>
-          </nav>
-        </div>
-
-        <div class="row notifications">
-          <button type="button" class="badge text-bg-light">
-            <a href="https://github.com/notifications">
-              <img
-                src="./icons/notifications.svg"
-                title="u have no unread notifications"
-              />
-            </a>
-            <!-- Inbox
-                  <span
-                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                  >
-                    1
-                    <span class="visually-hidden">unread messages</span>
-                  </span> -->
-          </button>
-        </div>
-        <div>
-          <div class="dropdown">
-            <button
-              class="btn btn-secondary dropdown-toggle"
-              type="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <img src="./icons/plus.svg" />
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li>
-                <a class="dropdown-item" href="#">Another action</a>
+        <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Pull requests
+                </a>
               </li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Issues
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">
+                  Marketplace
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">
+                  Explore
+                </a>
               </li>
             </ul>
           </div>
         </div>
-        <div class="dropdown-profile"></div>
-      </div>
+        <button type="button" class="btn btn-dark">
+          <img src="./icons/notifications.svg" />
+          <!-- <span
+            class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle"
+          >
+            <span class="visually-hidden">New alerts</span>
+          </span> -->
+        </button>
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <img src="./icons/plus.svg" />
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="#">New repository</a></li>
+              <li><a class="dropdown-item" href="#">Import repository</a></li>
+              <li><a class="dropdown-item" href="#">New gist</a></li>
+              <li><a class="dropdown-item" href="#">New organisation</a></li>
+              <li><a class="dropdown-item" href="#">New project</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <img class="avatar" src="./icons/avtar.png" />
+              <!-- <span
+                class="position-absolute top-0 start-100 translate-middle p-2 bg-primary border border-light rounded-circle"
+              >
+                <span class="visually-hidden">New alerts</span>
+              </span> -->
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li>
+                <a class="dropdown-item" href="#">Signed in as Mishwit</a>
+              </li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="#">Set status</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="#">Your profile</a></li>
+              <li><a class="dropdown-item" href="#">Your repositories</a></li>
+              <li><a class="dropdown-item" href="#">Your codespaces</a></li>
+              <li><a class="dropdown-item" href="#">Your projects</a></li>
+              <li><a class="dropdown-item" href="#">Your stars</a></li>
+              <li><a class="dropdown-item" href="#">Your gists</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="#">Upgrade</a></li>
+              <li><a class="dropdown-item" href="#">Try enterprise</a></li>
+              <li><a class="dropdown-item" href="#">Feature preview</a></li>
+              <li><a class="dropdown-item" href="#">Help</a></li>
+              <li><a class="dropdown-item" href="#">Settings</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="#">Sign out</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <main class="main"></main>
+    <main class="main row">
+      <aside class="col">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
+      </aside>
+      <div class="col"></div>
+      <aside class="col">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
+      </aside>
+    </main>
     <footer class="footer"></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
