--- a/index.html
+++ b/index.html
@@ -131,21 +131,69 @@
     <main class="main row">
       <aside class="col">
         <ul class="nav flex-column">
+          <div class="left-aside-head">
+            <h2>Recent Repositories</h2>
+            <button type="button" class="btn btn-success">Success</button>
+          </div>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+          </form>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
+            <a class="nav-link" href="https://github.com/Mishwit/google-page"
+              >Mishwit/google-page</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="https://github.com/Mishwit/yandex-page"
+              >Mishwit/yandex-page</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="https://github.com/Mishwit/github"
+              >Mishwit/github</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="https://github.com/Mishwit/Study"
+              >Mishwit/Study</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/Mishwit/pubb"
+              >Mishwit/pubb</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/Mishwit/123">
+              Mishwit/123</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/Mishwit/every-morning"
+              >Mishwit/every-morning</a
+            >
           </li>
         </ul>
       </aside>
-      <div class="col"></div>
+      <div class="col">
+        <div>
+          <h1>The home for all developers — including you.</h1>
+          <p>
+            Welcome to your personal dashboard, where you can find an
+            introduction to how GitHub works, tools to help you build software,
+            and help merging your first lines of code.
+          </p>
+        </div>
+        <div class="image-text">
+          <img src="./icons/tag.svg" />
+          <p>Start writing code</p>
+        </div>
+      </div>
       <aside class="col">
         <ul class="nav flex-column">
           <li class="nav-item">
