icons on leaft aside and  lilttle bit main

--- a/index.html
+++ b/index.html
@@ -129,58 +129,76 @@
       </nav>
     </header>
     <main class="main row">
-      <aside class="col">
+      <aside class="col aside-left">
         <ul class="nav flex-column">
           <div class="left-aside-head">
-            <h2>Recent Repositories</h2>
-            <button type="button" class="btn btn-success">Success</button>
+            <h2 class="aside-top-text">Recent Repositories</h2>
+            <button type="button" class="btn btn-sm btn-primary">
+              <img src="./icons/button-new.svg" /> New
+            </button>
           </div>
           <form class="d-flex" role="search">
             <input
-              class="form-control"
+              class="form-control aside-search"
               type="search"
               placeholder="Search"
               aria-label="Search"
             />
           </form>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Mishwit/google-page"
-              >Mishwit/google-page</a
+            <a
+              class="nav-link pages"
+              href="https://github.com/Mishwit/google-page"
+              ><img
+                class="avatar links"
+                src="./icons/avtar.png"
+              />Mishwit/google-page</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Mishwit/yandex-page"
-              >Mishwit/yandex-page</a
+            <a
+              class="nav-link pages"
+              href="https://github.com/Mishwit/yandex-page"
+              ><img class="avatar links" src="./icons/avtar.png" />
+              Mishwit/yandex-page</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Mishwit/github"
-              >Mishwit/github</a
+            <a class="nav-link pages" href="https://github.com/Mishwit/github"
+              ><img class="avatar links" src="./icons/avtar.png" />
+              Mishwit/github</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Mishwit/Study"
-              >Mishwit/Study</a
+            <a class="nav-link pages" href="https://github.com/Mishwit/Study"
+              ><img class="avatar links" src="./icons/avtar.png" />
+              Mishwit/Study</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Mishwit/pubb"
-              >Mishwit/pubb</a
+            <a class="nav-link pages" href="https://github.com/Mishwit/pubb"
+              ><img class="avatar links" src="./icons/avtar.png" />
+              Mishwit/pubb</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Mishwit/123">
+            <a class="nav-link pages" href="https://github.com/Mishwit/123"
+              ><img class="avatar links" src="./icons/avtar.png" />
               Mishwit/123</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Mishwit/every-morning"
-              >Mishwit/every-morning</a
+            <a
+              class="nav-link pages"
+              href="https://github.com/Mishwit/every-morning"
+              ><img class="avatar links" src="./icons/avtar.png" />
+              Mishwit/every-morning</a
             >
           </li>
         </ul>
+        <div>Show more</div>
       </aside>
-      <div class="col">
+      <div class="col center">
         <div>
           <h1>The home for all developers — including you.</h1>
           <p>
@@ -194,7 +212,7 @@
           <p>Start writing code</p>
         </div>
       </div>
-      <aside class="col">
+      <aside class="col right">
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Active</a>
