--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a class="brand-logo" href="https://github.com/">
           <img src="./icons/brand-logo.svg" />
         </a>
+
         <div class="searchline">
           <form class="d-flex" role="search">
             <input
@@ -32,6 +33,7 @@
             />
           </form>
         </div>
+
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -58,6 +60,7 @@
             </ul>
           </div>
         </div>
+
         <button type="button" class="btn btn-dark">
           <img src="./icons/notifications.svg" />
           <!-- <span
@@ -66,6 +69,7 @@
             <span class="visually-hidden">New alerts</span>
           </span> -->
         </button>
+
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
             <a
@@ -128,6 +132,7 @@
         </ul>
       </nav>
     </header>
+
     <main class="main row">
       <aside class="col aside-left">
         <ul class="nav flex-column">
@@ -137,14 +142,16 @@
               <img src="./icons/button-new.svg" /> New
             </button>
           </div>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control aside-search"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-          </form>
+          <div class="search-place">
+            <form class="d-flex" role="search">
+              <input
+                class="form-control aside-search"
+                type="search"
+                placeholder="Find a repository..."
+                aria-label="Search"
+              />
+            </form>
+          </div>
           <li class="nav-item">
             <a
               class="nav-link pages"
@@ -229,6 +236,7 @@
         </ul>
       </aside>
     </main>
+
     <footer class="footer"></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
