--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./footer.css" />
   </head>
+
   <body>
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -90,6 +91,7 @@
             </ul>
           </li>
         </ul>
+
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
             <a
@@ -138,10 +140,11 @@
         <ul class="nav flex-column">
           <div class="left-aside-head">
             <h2 class="aside-top-text">Recent Repositories</h2>
-            <button type="button" class="btn btn-sm btn-primary">
+            <button type="button" class="btn btn-sm btn-success">
               <img src="./icons/button-new.svg" /> New
             </button>
           </div>
+
           <div class="search-place">
             <form class="d-flex" role="search">
               <input
@@ -152,6 +155,7 @@
               />
             </form>
           </div>
+
           <li class="nav-item">
             <a
               class="nav-link pages"
@@ -162,6 +166,7 @@
               />Mishwit/google-page</a
             >
           </li>
+
           <li class="nav-item">
             <a
               class="nav-link pages"
@@ -170,30 +175,35 @@
               Mishwit/yandex-page</a
             >
           </li>
+
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/github"
               ><img class="avatar links" src="./icons/avtar.png" />
               Mishwit/github</a
             >
           </li>
+
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/Study"
               ><img class="avatar links" src="./icons/avtar.png" />
               Mishwit/Study</a
             >
           </li>
+
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/pubb"
               ><img class="avatar links" src="./icons/avtar.png" />
               Mishwit/pubb</a
             >
           </li>
+
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/123"
               ><img class="avatar links" src="./icons/avtar.png" />
               Mishwit/123</a
             >
           </li>
+
           <li class="nav-item">
             <a
               class="nav-link pages"
@@ -203,8 +213,20 @@
             >
           </li>
         </ul>
-        <div>Show more</div>
+        <div>
+          <button type="button" class="btn btn-link">Show more</button>
+        </div>
+        <div>
+          <h2>Recent activity</h2>
+          <div>
+            <p>
+              When you take actions across GitHub, we’ll provide links to that
+              activity here.
+            </p>
+          </div>
+        </div>
       </aside>
+
       <div class="col center">
         <div>
           <h1>The home for all developers — including you.</h1>
@@ -214,11 +236,84 @@
             and help merging your first lines of code.
           </p>
         </div>
-        <div class="image-text">
-          <img src="./icons/tag.svg" />
-          <p>Start writing code</p>
+
+        <div class="start">
+          <span>
+            <img src="./icons/tag.svg" />
+          </span>
+          <h5>Start writing code</h5>
+        </div>
+
+        <div class="cards">
+          <div class="advice">
+            <h5>Start a new repository</h5>
+            <p>
+              A repository contains all of your project's files, revision
+              history, and collaborator discussion.
+            </p>
+            <div class="create-repository">
+              <span>Mishwit /</span>
+              <div class="advice-search">
+                <div class="search-place">
+                  <form class="d-flex" role="search">
+                    <input
+                      class="form-control aside-search"
+                      type="search"
+                      placeholder="name your new repository..."
+                      aria-label="Search"
+                    />
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="advice">
+            <h5>Introduce yourself with a profile README</h5>
+            <p>
+              Share information about yourself by creating a profile README,
+              which appears at the top of your profile page.
+            </p>
+            <div class="profile-box">
+              <div class="create-readme">
+                <span>Mishwit/README.md</span>
+                <button type="button" class="btn btn-sm btn-success">
+                  Create
+                </button>
+              </div>
+
+              <div class="about-me">
+                <div class="numbers">
+                  <div class="list">
+                    <span>1</span>
+                    <p>- 👋 Hi, I’m @Mishwit</p>
+                  </div>
+                  <div class="list">
+                    <span>2</span>
+                    <p>- 👀 I’m interested in ...</p>
+                  </div>
+                  <div class="list">
+                    <span>3</span>
+                    <p>- 🌱 I’m currently learning ...</p>
+                  </div>
+                  <div class="list">
+                    <span>4</span>
+                    <p>- 💞️ I’m looking to collaborate on ...</p>
+                  </div>
+                  <div class="list">
+                    <span>5</span>
+                    <p>- 📫 How to reach me ...</p>
+                  </div>
+                  <div class="list">
+                    <span>6</span>
+                    <p></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
       <aside class="col right">
         <ul class="nav flex-column">
           <li class="nav-item">
