+radios + left card in main

--- a/index.html
+++ b/index.html
@@ -287,6 +287,46 @@
                 </div>
               </div>
             </div>
+            <div class="choose-type">
+              <div class="form-check public">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="exampleRadios"
+                  id="exampleRadios1"
+                  value="option1"
+                  checked
+                />
+                <label class="form-check-label" for="exampleRadios1">
+                  <img src="./icons/public.svg" />
+                  <span>Public</span>
+                  <p>Anyone on the internet can see this repository</p>
+                </label>
+              </div>
+              <div class="form-check private">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="exampleRadios"
+                  id="exampleRadios1"
+                  value="option1"
+                  checked
+                />
+                <label class="form-check-label" for="exampleRadios1">
+                  <img src="./icons/public.svg" />
+                  <span>
+                    Private
+                    <p>You choose who can see and commit to this repository</p>
+                  </span>
+                </label>
+              </div>
+              <button
+                type="button"
+                class="btn btn-sm btn-success create-button"
+              >
+                Create a new repository
+              </button>
+            </div>
           </div>
           <div class="advice">
             <h5>Introduce yourself with a profile README</h5>
@@ -337,22 +377,22 @@
 
       <aside class="col right">
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
+          <img src="./icons/top image card.png" class="card-img-top" />
+          <!-- <div class="card-body">
             <p class="card-text">
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-          </div>
+          </div> -->
         </div>
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
+          <img src="./icons/bottom image card.png" class="card-img-top" />
+          <!-- <div class="card-body">
             <p class="card-text">
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-          </div>
+          </div> -->
         </div>
       </aside>
     </main>
