--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           </ul>
         </div>
 
-        <div class="cards">
+        <div class="cards-top">
           <div class="advice">
             <h5>Start a new repository</h5>
             <p>
@@ -371,6 +371,31 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="writing">
+          <div class="start">
+            <span class="tag">
+              <img src="./icons/tag.svg" />
+            </span>
+            <h5>Use tools of the trade</h5>
+          </div>
+        </div>
+        <div class="cards-bottom">
+          <div class="info">
+            <h5>Simplify your development workflow with a GUI</h5>
+            <p>
+              Install GitHub Desktop to visualize, commit, and push changes
+              without ever touching the command line.
+            </p>
+          </div>
+
+          <div class="info">
+            <h5>Get AI-based coding suggestions</h5>
+            <p>
+              Try GitHub Copilot free for 60 days, which suggests code and
+              entire functions in real-time, right from your editor.
+            </p>
           </div>
         </div>
       </div>
