small corrects in list

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 </p>
                 <div class="profile-box">
                   <div class="create-readme">
-                    <span>Mishwit/README.md</span>
+                    <span class="my-nick">Mishwit/README.md</span>
                     <button type="button" class="btn btn-sm btn-success">
                       Create
                     </button>
@@ -353,28 +353,30 @@
                   <div class="about-me">
                     <div class="numbers">
                       <div class="list">
-                        <span>1</span>
-                        <p>- 👋 Hi, I’m @Mishwit</p>
+                        <span class="num">1</span>
+                        <p class="iam-text">- 👋 Hi, I’m @Mishwit</p>
                       </div>
                       <div class="list">
-                        <span>2</span>
-                        <p>- 👀 I’m interested in ...</p>
+                        <span class="num">2</span>
+                        <p class="iam-text">- 👀 I’m interested in ...</p>
                       </div>
                       <div class="list">
-                        <span>3</span>
-                        <p>- 🌱 I’m currently learning ...</p>
+                        <span class="num">3</span>
+                        <p class="iam-text">- 🌱 I’m currently learning ...</p>
                       </div>
                       <div class="list">
-                        <span>4</span>
-                        <p>- 💞️ I’m looking to collaborate on ...</p>
+                        <span class="num">4</span>
+                        <p class="iam-text">
+                          - 💞️ I’m looking to collaborate on ...
+                        </p>
                       </div>
                       <div class="list">
-                        <span>5</span>
-                        <p>- 📫 How to reach me ...</p>
+                        <span class="num">5</span>
+                        <p class="iam-text">- 📫 How to reach me ...</p>
                       </div>
                       <div class="list">
-                        <span>6</span>
-                        <p></p>
+                        <span class="num">6</span>
+                        <p class="iam-text"></p>
                       </div>
                     </div>
                   </div>
