small corrects in header + main

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Codespaces
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">
                   Marketplace
                 </a>
@@ -237,7 +242,7 @@
             <span class="tag">
               <img src="./icons/tag.svg" />
             </span>
-            <h5>Start writing code</h5>
+            <h5 class="normal-text">Start writing code</h5>
           </div>
 
           <ul class="navbar-nav">
