--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <ul class="nav flex-column">
           <div class="left-aside-head">
             <h2 class="aside-top-text">Top Repositories</h2>
-            <button type="button" class="btn btn-sm btn-success">
+            <button type="button" class="btn btn-sm btn-success aside-button">
               <img src="./icons/button-new.svg" /> New
             </button>
           </div>
