--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <span class="tag">
               <img src="./icons/tag.svg" />
             </span>
-            <h5 class="normal-text">Start writing code</h5>
+            <h5 class="title-text">Start writing code</h5>
           </div>
 
           <ul class="navbar-nav">
@@ -275,17 +275,17 @@
             <div class="card-body">
               <div class="advice">
                 <h5>Start a new repository</h5>
-                <p>
+                <p class="normal-text">
                   A repository contains all of your project's files, revision
                   history, and collaborator discussion.
                 </p>
                 <div class="create-repository">
-                  <span>Mishwit /</span>
+                  <span class="username">Mishwit /</span>
                   <div class="advice-search">
                     <div class="search-place">
                       <form class="d-flex" role="search">
                         <input
-                          class="form-control aside-search"
+                          class="form-control card-aside-search"
                           type="search"
                           placeholder="name your new repository..."
                           aria-label="Search"
@@ -320,7 +320,7 @@
                       checked
                     />
                     <label class="form-check-label" for="exampleRadios1">
-                      <img src="./icons/public.svg" />
+                      <img src="./icons/lock.svg" />
                       <span>
                         Private
                         <p>
@@ -343,7 +343,7 @@
             <div class="card-body">
               <div class="advice">
                 <h5>Introduce yourself with a profile README</h5>
-                <p>
+                <p class="normal-text">
                   Share information about yourself by creating a profile README,
                   which appears at the top of your profile page.
                 </p>
@@ -391,114 +391,6 @@
           </div>
         </div>
 
-        <!-- <div class="cards-top">
-          <div class="advice">
-            <h5>Start a new repository</h5>
-            <p>
-              A repository contains all of your project's files, revision
-              history, and collaborator discussion.
-            </p>
-            <div class="create-repository">
-              <span>Mishwit /</span>
-              <div class="advice-search">
-                <div class="search-place">
-                  <form class="d-flex" role="search">
-                    <input
-                      class="form-control aside-search"
-                      type="search"
-                      placeholder="name your new repository..."
-                      aria-label="Search"
-                    />
-                  </form>
-                </div>
-              </div>
-            </div>
-            <div class="choose-type">
-              <div class="form-check public">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios1"
-                  value="option1"
-                  checked
-                />
-                <label class="form-check-label" for="exampleRadios1">
-                  <img src="./icons/public.svg" />
-                  <span>Public</span>
-                  <p>Anyone on the internet can see this repository</p>
-                </label>
-              </div>
-              <div class="form-check private">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="exampleRadios"
-                  id="exampleRadios1"
-                  value="option1"
-                  checked
-                />
-                <label class="form-check-label" for="exampleRadios1">
-                  <img src="./icons/public.svg" />
-                  <span>
-                    Private
-                    <p>You choose who can see and commit to this repository</p>
-                  </span>
-                </label>
-              </div>
-              <button
-                type="button"
-                class="btn btn-sm btn-success create-button"
-              >
-                Create a new repository
-              </button>
-            </div>
-          </div>
-          <div class="advice">
-            <h5>Introduce yourself with a profile README</h5>
-            <p>
-              Share information about yourself by creating a profile README,
-              which appears at the top of your profile page.
-            </p>
-            <div class="profile-box">
-              <div class="create-readme">
-                <span>Mishwit/README.md</span>
-                <button type="button" class="btn btn-sm btn-success">
-                  Create
-                </button>
-              </div>
-
-              <div class="about-me">
-                <div class="numbers">
-                  <div class="list">
-                    <span>1</span>
-                    <p>- 👋 Hi, I’m @Mishwit</p>
-                  </div>
-                  <div class="list">
-                    <span>2</span>
-                    <p>- 👀 I’m interested in ...</p>
-                  </div>
-                  <div class="list">
-                    <span>3</span>
-                    <p>- 🌱 I’m currently learning ...</p>
-                  </div>
-                  <div class="list">
-                    <span>4</span>
-                    <p>- 💞️ I’m looking to collaborate on ...</p>
-                  </div>
-                  <div class="list">
-                    <span>5</span>
-                    <p>- 📫 How to reach me ...</p>
-                  </div>
-                  <div class="list">
-                    <span>6</span>
-                    <p></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
         <div class="writing">
           <div class="start">
             <span class="tag">
