--- a/index.html
+++ b/index.html
@@ -171,36 +171,46 @@
             <a
               class="nav-link pages"
               href="https://github.com/Mishwit/yandex-page"
-              ><img class="avatar links" src="./icons/avtar.png" />
-              Mishwit/yandex-page</a
+              ><img
+                class="avatar links"
+                src="./icons/avtar.png"
+              />Mishwit/yandex-page</a
             >
           </li>
 
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/github"
-              ><img class="avatar links" src="./icons/avtar.png" />
-              Mishwit/github</a
+              ><img
+                class="avatar links"
+                src="./icons/avtar.png"
+              />Mishwit/github</a
             >
           </li>
 
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/Study"
-              ><img class="avatar links" src="./icons/avtar.png" />
-              Mishwit/Study</a
+              ><img
+                class="avatar links"
+                src="./icons/avtar.png"
+              />Mishwit/Study</a
             >
           </li>
 
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/pubb"
-              ><img class="avatar links" src="./icons/avtar.png" />
-              Mishwit/pubb</a
+              ><img
+                class="avatar links"
+                src="./icons/avtar.png"
+              />Mishwit/pubb</a
             >
           </li>
 
           <li class="nav-item">
             <a class="nav-link pages" href="https://github.com/Mishwit/123"
-              ><img class="avatar links" src="./icons/avtar.png" />
-              Mishwit/123</a
+              ><img
+                class="avatar links"
+                src="./icons/avtar.png"
+              />Mishwit/123</a
             >
           </li>
 
@@ -208,8 +218,10 @@
             <a
               class="nav-link pages"
               href="https://github.com/Mishwit/every-morning"
-              ><img class="avatar links" src="./icons/avtar.png" />
-              Mishwit/every-morning</a
+              ><img
+                class="avatar links"
+                src="./icons/avtar.png"
+              />Mishwit/every-morning</a
             >
           </li>
         </ul>
@@ -230,6 +242,7 @@
       <div class="col center">
         <div>
           <h1 class="phrase">The home for all developers — including you.</h1>
+
           <p class="welcome-text">
             Welcome to your personal dashboard, where you can find an
             introduction to how GitHub works, tools to help you build software,
@@ -242,6 +255,7 @@
             <span class="tag">
               <img src="./icons/tag.svg" />
             </span>
+
             <h5 class="title-text">Start writing code</h5>
           </div>
 
@@ -275,13 +289,16 @@
             <div class="card-body">
               <div class="advice">
                 <h5>Start a new repository</h5>
+
                 <p class="normal-text">
                   A repository contains all of your project's files, revision
                   history, and collaborator discussion.
                 </p>
+
                 <div class="create-repository">
                   <span class="username">Mishwit /</span>
-                  <div class="advice-search">
+
+                  <div class="row">
                     <div class="search-place">
                       <form class="d-flex" role="search">
                         <input
@@ -304,12 +321,14 @@
                       value="option1"
                       checked
                     />
+
                     <label class="form-check-label" for="exampleRadios1">
                       <img src="./icons/public.svg" />
                       <span>Public</span>
                       <p>Anyone on the internet can see this repository</p>
                     </label>
                   </div>
+
                   <div class="form-check private">
                     <input
                       class="form-check-input"
@@ -319,6 +338,7 @@
                       value="option1"
                       checked
                     />
+
                     <label class="form-check-label" for="exampleRadios1">
                       <img src="./icons/lock.svg" />
                       <span>
@@ -343,13 +363,16 @@
             <div class="card-body">
               <div class="advice">
                 <h5>Introduce yourself with a profile README</h5>
+
                 <p class="normal-text">
                   Share information about yourself by creating a profile README,
                   which appears at the top of your profile page.
                 </p>
+
                 <div class="profile-box">
                   <div class="create-readme">
                     <span class="my-nick">Mishwit/README.md</span>
+
                     <button type="button" class="btn btn-sm btn-success">
                       Create
                     </button>
@@ -361,24 +384,29 @@
                         <span class="num">1</span>
                         <p class="iam-text">- 👋 Hi, I’m @Mishwit</p>
                       </div>
+
                       <div class="list">
                         <span class="num">2</span>
                         <p class="iam-text">- 👀 I’m interested in ...</p>
                       </div>
+
                       <div class="list">
                         <span class="num">3</span>
                         <p class="iam-text">- 🌱 I’m currently learning ...</p>
                       </div>
+
                       <div class="list">
                         <span class="num">4</span>
                         <p class="iam-text">
                           - 💞️ I’m looking to collaborate on ...
                         </p>
                       </div>
+
                       <div class="list">
                         <span class="num">5</span>
                         <p class="iam-text">- 📫 How to reach me ...</p>
                       </div>
+
                       <div class="list">
                         <span class="num">6</span>
                         <p class="iam-text"></p>
@@ -396,41 +424,148 @@
             <span class="tag">
               <img src="./icons/tag.svg" />
             </span>
+
             <h5>Use tools of the trade</h5>
           </div>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <img src="./icons/dots.svg" />
+              </a>
+
+              <div
+                class="dropdown-menu p-4 text-muted"
+                style="max-width: 200px"
+              >
+                <p>
+                  You're seeing this because you haven't used repositories,
+                  issues, and pull requests recently.
+                </p>
+
+                <p class="mb-0">Remove from dashboard</p>
+              </div>
+            </li>
+          </ul>
         </div>
         <div class="cards-middle">
           <div class="card">
             <div class="card-body">
-              Install GitHub Desktop to visualize, commit, and push changes
-              without ever touching the command line.
+              <h5>Simplify your development workflow with a GUI</h5>
+
+              <div class="row">
+                <div>
+                  <img class="gh-desktop" src="./icons/gh-desktop.png" />
+                </div>
+
+                <div>
+                  <a href="https://desktop.github.com/">
+                    Install GitHub Desktop,</a
+                  >
+                  to visualize, commit, and push changes without ever touching
+                  the command line.
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="card">
             <div class="card-body">
-              Try GitHub Copilot free for 60 days, which suggests code and
-              entire functions in real-time, right from your editor.
+              <h5>Get AI-based coding suggestions</h5>
+
+              <div class="row">
+                <div>
+                  <img class="copilot" src="./icons/copilot.webp" />
+                </div>
+
+                <div>
+                  <a href="https://github.com/github-copilot/signup">
+                    Try GitHub Copilot free for 60 days,</a
+                  >
+                  which suggests code and entire functions in real-time, right
+                  from your editor.
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="cards-bottom">
-          <div class="card mb-3">
-            <img src="./icons/image-card.png" class="card-img-top" />
+        <div class="writing">
+          <div class="start">
+            <span class="tag">
+              <img src="./icons/study-hat.svg" />
+            </span>
+
+            <h5>Get started on GitHub</h5>
           </div>
 
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <img src="./icons/dots.svg" />
+              </a>
+
+              <div
+                class="dropdown-menu p-4 text-muted"
+                style="max-width: 200px"
+              >
+                <p>
+                  You're seeing this because you haven't used repositories,
+                  issues, and pull requests recently.
+                </p>
+
+                <p class="mb-0">Remove from dashboard</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="cards-bottom">
           <div class="card" style="width: 18rem">
+            <!-- <div class="card-body"> -->
+            <div>
+              <a
+                href="https://www.youtube.com/watch?v=pBy1zgt0XPc&ab_channel=GitHub"
+              >
+                <img src="./icons/video-thumbnail.jpg" />
+                <div>
+                  <span>
+                    <img src="./icons/play.svg" />
+                  </span></div
+              ></a>
+            </div>
+            <span>What is GitHub?</span>
+          </div>
+
+          <div class="card">
             <div class="card-body">
-              <h5 class="card-title">
-                Follow this exercise to try the GitHub flow
-              </h5>
-              <p class="card-text">
+              <div>
+                <img src="./icons/path-branch.svg" />
+                <h5>Follow this exercise to try the GitHub flow</h5>
+              </div>
+
+              <p class="normal-text">
                 GitHub's “Hello World” tutorial teaches you essentials, where
                 you create your own repository and learn GitHub's pull request
                 workflow for creating and reviewing code.
               </p>
-              <a href="#" class="btn btn-light">Try the GitHub flow</a>
+
+              <a
+                href="https://docs.github.com/ru/get-started/quickstart/github-flow"
+                class="btn btn-light"
+                >Try the GitHub flow</a
+              >
             </div>
           </div>
         </div>
@@ -438,7 +573,7 @@
 
       <aside class="col right">
         <div class="card" style="width: 18rem">
-          <img src="./icons/top image card.png" class="card-img-top" />
+          <img src="" class="card-img-top" />
           <!-- <div class="card-body">
             <p class="card-text">
               Some quick example text to build on the card title and make up the
